# gazelle:prefix github.com/verself/substrate

load(":digests.bzl", "layer_digest_genrule")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "converge_sources",
    srcs = [
        ":substrate_sources",
        "//src/substrate/binaries:server_tools_archive",
        "//src/substrate/binaries:substrate_go_tools",
    ],
)

filegroup(
    name = "substrate_sources",
    srcs = glob(
        [
            "ansible/**",
            "migrations/**",
            "scripts/**",
        ],
        exclude = [
            "ansible/.ansible/**",
            "ansible/.cache/**",
            "ansible/**/__pycache__/**",
            "ansible/inventory/*.ini",
            "scripts/.venv/**",
            "scripts/**/__pycache__/**",
        ],
    ),
)

# Path patterns scoping each layer's Ansible source subset. The L1 hash only
# changes when host/OS-shaped roles, the L1 playbook, or the shared Ansible
# config change. Same for the rest. Shared paths (group_vars, ansible.cfg,
# callback_plugins, plugins) are included in every layer's digest because any
# of them can change task behavior at runtime.
#
# Bash `case` glob: `*` matches any character including `/`, so a pattern
# like `src/substrate/ansible/roles/base/*` matches every file at any depth
# under that directory. The patterns are unquoted in the rendered cmd so
# bash treats them as globs.
_SHARED_ANSIBLE_PATTERNS = [
    "src/substrate/ansible/group_vars/all/catalog.yml",
    "src/substrate/ansible/ansible.cfg",
    "src/substrate/ansible/callback_plugins/*",
    "src/substrate/ansible/plugins/*",
    "src/substrate/ansible/group_vars/*",
    "src/substrate/ansible/rendered/*",
]

_L1_OS_ANSIBLE_PATTERNS = _SHARED_ANSIBLE_PATTERNS + [
    "src/substrate/ansible/playbooks/l1_os.yml",
    "src/substrate/ansible/playbooks/tasks/controller-preflight.yml",
    "src/substrate/ansible/roles/base/*",
    "src/substrate/ansible/roles/zfs/*",
    "src/substrate/ansible/roles/nftables/*",
    "src/substrate/ansible/roles/wireguard/*",
    "src/substrate/ansible/roles/substrate_profile/*",
    "src/substrate/ansible/roles/containerd/*",
    "src/substrate/ansible/roles/firecracker/*",
]

_L2_USERSPACE_ANSIBLE_PATTERNS = _SHARED_ANSIBLE_PATTERNS + [
    "src/substrate/ansible/playbooks/l2_userspace.yml",
    "src/substrate/ansible/tasks/userspace_batch.yml",
]

_L3_BINARIES_ANSIBLE_PATTERNS = _SHARED_ANSIBLE_PATTERNS + [
    "src/substrate/ansible/playbooks/l3_binaries.yml",
    "src/substrate/ansible/roles/spire/*",
    "src/substrate/ansible/roles/garage/*",
    "src/substrate/ansible/roles/bazel_remote/*",
    "src/substrate/ansible/roles/nomad/*",
    "src/substrate/ansible/roles/clickhouse/*",
    "src/substrate/ansible/roles/tigerbeetle/*",
    "src/substrate/ansible/roles/postgresql/*",
    "src/substrate/ansible/roles/zitadel/*",
    "src/substrate/ansible/roles/openbao/*",
    "src/substrate/ansible/roles/wireguard/*",
    "src/substrate/ansible/roles/ssh_ca/*",
    "src/substrate/ansible/roles/nats/*",
    "src/substrate/ansible/roles/temporal/*",
    "src/substrate/ansible/roles/stalwart/*",
    "src/substrate/ansible/roles/electric/*",
    "src/substrate/ansible/roles/otelcol/*",
    "src/substrate/ansible/roles/grafana/*",
    "src/substrate/ansible/roles/verdaccio/*",
    "src/substrate/ansible/roles/caddy/*",
    "src/substrate/ansible/roles/forgejo/*",
]

_L4A_COMPONENTS_ANSIBLE_PATTERNS = _SHARED_ANSIBLE_PATTERNS + [
    "src/substrate/ansible/playbooks/l4a_components.yml",
    "src/substrate/ansible/tasks/component_substrate.yml",
    "src/substrate/ansible/tasks/component/*",
    "src/substrate/ansible/tasks/bootstrap/*",
    "src/substrate/ansible/roles/resend/*",
    "src/substrate/ansible/roles/spire_registrations/*",
    "src/substrate/ansible/roles/openbao_tenancy/*",
    "src/substrate/ansible/roles/zitadel_oauth_app/*",
    "src/substrate/ansible/roles/zitadel_project_roles/*",
]

layer_digest_genrule(
    name = "prod_l1_os_digest",
    output = "prod.l1_os.sha256",
    patterns = _L1_OS_ANSIBLE_PATTERNS,
)

layer_digest_genrule(
    name = "prod_l2_userspace_digest",
    output = "prod.l2_userspace.sha256",
    patterns = _L2_USERSPACE_ANSIBLE_PATTERNS,
)

layer_digest_genrule(
    name = "prod_l3_binaries_digest",
    output = "prod.l3_binaries.sha256",
    patterns = _L3_BINARIES_ANSIBLE_PATTERNS,
)

layer_digest_genrule(
    name = "prod_l4a_components_digest",
    output = "prod.l4a_components.sha256",
    patterns = _L4A_COMPONENTS_ANSIBLE_PATTERNS,
)
