load("@bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//src/viteplus-monorepo:viteplus_rules.bzl", "viteplus_input_sbom", "viteplus_node_runtime_artifact")

package(default_visibility = ["//visibility:public"])

exports_files([
    ".npmrc",
    "package.json",
    "pnpm-lock.yaml",
    "pnpm-workspace.yaml",
    "tsconfig.base.json",
    "tsconfig.json",
    "vite.config.ts",
])

npm_link_all_packages()

copy_to_bin(
    name = "workspace_config",
    srcs = [
        ".npmrc",
        "package.json",
        "pnpm-lock.yaml",
        "pnpm-workspace.yaml",
        "tsconfig.base.json",
        "tsconfig.json",
        "vite.config.ts",
    ],
)

filegroup(
    name = "workspace_sources",
    srcs = [
        ":workspace_config",
        "//src/viteplus-monorepo/packages/auth-web:sources",
        "//src/viteplus-monorepo/packages/brand:sources",
        "//src/viteplus-monorepo/packages/nitro-plugins:sources",
        "//src/viteplus-monorepo/packages/ui:sources",
        "//src/viteplus-monorepo/packages/web-env:sources",
    ] + glob([
        "patches/**/*",
    ]),
)

filegroup(
    name = "workspace_sbom_sources",
    srcs = [
        ".npmrc",
        "package.json",
        "pnpm-lock.yaml",
        "pnpm-workspace.yaml",
        "tsconfig.base.json",
        "tsconfig.json",
        "vite.config.ts",
        "//src/viteplus-monorepo/apps/company:sources",
        "//src/viteplus-monorepo/apps/verself-web:sources",
        "//src/viteplus-monorepo/packages/auth-web:sources",
        "//src/viteplus-monorepo/packages/brand:sources",
        "//src/viteplus-monorepo/packages/nitro-plugins:sources",
        "//src/viteplus-monorepo/packages/ui:sources",
        "//src/viteplus-monorepo/packages/web-env:sources",
    ] + glob([
        "patches/**/*",
    ]),
)

viteplus_input_sbom(
    name = "input_sbom",
    srcs = [":workspace_sbom_sources"],
    output = "viteplus-input.cdx.json",
)

viteplus_node_runtime_artifact(
    name = "nodejs_runtime_nomad_artifact",
)
