load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@rules_zig//zig:defs.bzl", "zig_binary", "zig_configure_binary", "zig_library", "zig_test")

package(default_visibility = ["//visibility:private"])

# Cross-language wire-format contract artifact. Consumers declare this label as
# a `data` dep so a vectors.json regeneration invalidates their test cache.
exports_files(
    ["protocol/vectors.json"],
    visibility = ["//visibility:public"],
)

zig_library(
    name = "vm_guest_telemetry",
    srcs = ["src/root.zig"],
    import_name = "vm_guest_telemetry",
    main = "src/root.zig",
)

# Guest-process module exposed for bench/test consumers that need the same
# /proc parsers the guest binary uses. Linux-only because guest.zig pulls in
# std.os.linux and AF_VSOCK constants.
zig_library(
    name = "guest_agent",
    srcs = ["src/guest.zig"],
    import_name = "guest_agent",
    main = "src/guest.zig",
    target_compatible_with = ["@platforms//os:linux"],
    deps = [":vm_guest_telemetry"],
)

# Host-config build of the guest binary. Always wrapped by zig_configure_binary
# below to pin the deployable to linux/x86_64/musl regardless of the requesting
# command-line config.
zig_binary(
    name = "_vm-guest-telemetry",
    srcs = ["src/guest.zig"],
    main = "src/guest.zig",
    deps = [":vm_guest_telemetry"],
)

zig_configure_binary(
    name = "vm-guest-telemetry",
    actual = ":_vm-guest-telemetry",
    mode = "release_safe",
    target = "//bazel/platforms:linux_amd64_musl",
    visibility = ["//src/vm-orchestrator/guest-images/substrate:__pkg__"],
)

zig_binary(
    name = "generate_vectors",
    srcs = ["src/generate_vectors.zig"],
    main = "src/generate_vectors.zig",
    deps = [":vm_guest_telemetry"],
)

zig_binary(
    name = "bench",
    srcs = ["src/bench.zig"],
    main = "src/bench.zig",
    target_compatible_with = ["@platforms//os:linux"],
    deps = [
        ":guest_agent",
        ":vm_guest_telemetry",
    ],
)

zig_test(
    name = "root_test",
    main = "src/root.zig",
)

# guest.zig pulls in std.os.linux + AF_VSOCK; embedded tests compile only on
# linux. The deployable artifact is musl-linux anyway, so this matches reality.
zig_test(
    name = "guest_test",
    srcs = ["src/guest.zig"],
    main = "src/guest.zig",
    target_compatible_with = ["@platforms//os:linux"],
    deps = [":vm_guest_telemetry"],
)

# Bazel-graph staleness gate for protocol/vectors.json. `bazel test` fails when
# the checked-in file diverges from the canonical Zig encoder; `bazel run
# //src/vm-guest-telemetry:write_vectors` rewrites it in place.
genrule(
    name = "vectors_generated",
    outs = ["vectors.generated.json"],
    cmd = "$(execpath :generate_vectors) > $@",
    tools = [":generate_vectors"],
)

write_source_files(
    name = "write_vectors",
    files = {
        "protocol/vectors.json": ":vectors_generated",
    },
    visibility = ["//visibility:public"],
)
