load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/verself/vm-orchestrator

go_library(
    name = "vm-orchestrator",
    srcs = [
        "api.go",
        "checkpoint.go",
        "client.go",
        "client_types.go",
        "control.go",
        "doc.go",
        "filesystem_commit.go",
        "metrics.go",
        "network.go",
        "observer.go",
        "orchestrator.go",
        "peer_creds.go",
        "privops.go",
        "privops_direct.go",
        "rpc_convert.go",
        "server.go",
        "state_store.go",
        "telemetry_decode.go",
        "telemetry_stream.go",
        "tracing.go",
        "zvol.go",
    ],
    importpath = "github.com/verself/vm-orchestrator",
    visibility = ["//visibility:public"],
    deps = [
        "//src/apiwire",
        "//src/vm-orchestrator/proto/v1:proto",
        "//src/vm-orchestrator/vmproto",
        "//src/vm-orchestrator/zfs",
        "@com_github_google_uuid//:uuid",
        "@com_github_oklog_ulid_v2//:ulid",
        "@com_github_vishvananda_netlink//:netlink",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//baggage",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
        "@org_golang_x_sys//unix",
        "@org_modernc_sqlite//:sqlite",
    ],
)

go_test(
    name = "vm-orchestrator_test",
    srcs = [
        "filesystem_mounts_test.go",
        "privops_direct_test.go",
        "telemetry_stream_test.go",
    ],
    embed = [":vm-orchestrator"],
    deps = [
        "//src/vm-orchestrator/vmproto",
        "//src/vm-orchestrator/zfs",
    ],
)

alias(
    name = "go_default_library",
    actual = ":vm-orchestrator",
    visibility = ["//visibility:public"],
)
