load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_tar(
    name = "substrate_go_tools",
    out = "substrate_go_tools.tar",
    files = {
        "//src/object-storage-service/cmd/object-storage-secret-sync:object-storage-secret-sync": "opt/verself/profile/bin/object-storage-secret-sync",
        "//src/temporal-platform/cmd/temporal-bootstrap:temporal-bootstrap": "opt/verself/profile/bin/temporal-bootstrap",
        "//src/temporal-platform/cmd/temporal-schema:temporal-schema": "opt/verself/profile/bin/temporal-schema",
        "//src/temporal-platform/cmd/verself-temporal-server:verself-temporal-server": "opt/verself/profile/bin/verself-temporal-server",
        "//src/vm-orchestrator/cmd/vm-orchestrator-cli:vm-orchestrator-cli": "opt/verself/profile/bin/vm-orchestrator-cli",
        "//src/vm-orchestrator/cmd/vm-orchestrator:vm-orchestrator": "opt/verself/profile/bin/vm-orchestrator",
    },
    modes = {
        "opt/verself/profile/bin/object-storage-secret-sync": "0755",
        "opt/verself/profile/bin/temporal-bootstrap": "0755",
        "opt/verself/profile/bin/temporal-schema": "0755",
        "opt/verself/profile/bin/verself-temporal-server": "0755",
        "opt/verself/profile/bin/vm-orchestrator-cli": "0755",
        "opt/verself/profile/bin/vm-orchestrator": "0755",
    },
    visibility = ["//visibility:public"],
)
