load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wirecheck",
    srcs = ["wirecheck.go"],
    importpath = "github.com/verself/apiwire/wirecheck",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_test(
    name = "wirecheck_test",
    srcs = ["wirecheck_test.go"],
    embed = [":wirecheck"],
)

# Bazel-graph-anchored wire check for every service whose OpenAPI 3.1
# spec is still committed to disk (i.e. not yet on the verself_openapi_yaml
# rule). Editing any listed YAML invalidates the test; legacy_specs_test.go
# walks the same list and runs wirecheck.CheckFile against each.
go_test(
    name = "legacy_specs_test",
    srcs = ["legacy_specs_test.go"],
    data = [
        "//src/governance-service/openapi:openapi-3.1.yaml",
        "//src/identity-service/openapi:internal-openapi-3.1.yaml",
        "//src/identity-service/openapi:openapi-3.1.yaml",
        "//src/mailbox-service/openapi:openapi-3.1.yaml",
        "//src/notifications-service/openapi:openapi-3.1.yaml",
        "//src/object-storage-service/openapi:openapi-3.1.yaml",
        "//src/profile-service/openapi:internal-openapi-3.1.yaml",
        "//src/profile-service/openapi:openapi-3.1.yaml",
        "//src/projects-service/openapi:internal-openapi-3.1.yaml",
        "//src/projects-service/openapi:openapi-3.1.yaml",
        "//src/sandbox-rental-service/openapi:internal-openapi-3.1.yaml",
        "//src/sandbox-rental-service/openapi:openapi-3.1.yaml",
        "//src/secrets-service/openapi:openapi-3.1.yaml",
        "//src/source-code-hosting-service/openapi:openapi-3.1.yaml",
        "//src/source-code-hosting-service/openapi:internal-openapi-3.1.yaml",
    ],
    deps = [":wirecheck"],
)
