load("//tools/codegen:openapi.bzl", "verself_openapi_go_client")

# The Go OpenAPI client lives only in bazel-out — see .gitignore. The
# action graph rebuilds client.gen.go when the spec changes, and any
# downstream service that imports github.com/verself/billing-service/client
# rebuilds in turn. There is no on-disk source of truth.
verself_openapi_go_client(
    name = "client",
    importpath = "github.com/verself/billing-service/client",
    package_name = "billingclient",
    spec = "//src/billing-service/openapi:spec_3_0",
)

alias(
    name = "go_default_library",
    actual = ":client",
    visibility = ["//visibility:public"],
)
