load("@io_bazel_rules_go//go:def.bzl", "go_library")

# The Go OpenAPI client lives only in bazel-out — see .gitignore. The
# action graph rebuilds client.gen.go when the spec changes, and any
# downstream service that imports github.com/verself/billing-service/client
# rebuilds in turn. There is no on-disk source of truth.
# oapi-codegen formats through x/tools/imports, which consults the Go toolchain;
# strict action env requires an explicit controller tool path.
genrule(
    name = "client_gen",
    srcs = ["//src/billing-service/openapi:spec_3_0"],
    outs = ["client.gen.go"],
    cmd = "PATH=/usr/local/go/bin:/usr/bin:/bin $(location @com_github_oapi_codegen_oapi_codegen_v2//cmd/oapi-codegen:oapi-codegen) -generate types,client -package billingclient -o $@ $(location //src/billing-service/openapi:spec_3_0)",
    tools = ["@com_github_oapi_codegen_oapi_codegen_v2//cmd/oapi-codegen:oapi-codegen"],
)

go_library(
    name = "client",
    srcs = [":client_gen"],
    importpath = "github.com/verself/billing-service/client",
    visibility = ["//visibility:public"],
    deps = ["@com_github_oapi_codegen_runtime//:runtime"],
)

alias(
    name = "go_default_library",
    actual = ":client",
    visibility = ["//visibility:public"],
)
