load("@io_bazel_rules_go//go:def.bzl", "go_library")

# Bazel rebuilds client.gen.go from the generated OpenAPI spec so downstream
# targets track the API shape. The checked-in copy keeps plain Go tooling able
# to load github.com/verself/billing-service/client outside Bazel.
# oapi-codegen formats through x/tools/imports, which consults the Go toolchain;
# strict action env requires an explicit controller tool path.
genrule(
    name = "client_gen",
    srcs = ["//src/billing-service/openapi:spec_3_0"],
    outs = ["client.gen.go"],
    cmd = "PATH=/usr/local/go/bin:/usr/bin:/bin $(location @com_github_oapi_codegen_oapi_codegen_v2//cmd/oapi-codegen:oapi-codegen) -generate types,client -package billingclient -o $@ $(location //src/billing-service/openapi:spec_3_0)",
    tools = ["@com_github_oapi_codegen_oapi_codegen_v2//cmd/oapi-codegen:oapi-codegen"],
)

go_library(
    name = "client",
    srcs = [":client_gen"],
    importpath = "github.com/verself/billing-service/client",
    visibility = ["//visibility:public"],
    deps = ["@com_github_oapi_codegen_runtime//:runtime"],
)

alias(
    name = "go_default_library",
    actual = ":client",
    visibility = ["//visibility:public"],
)
