load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrations",
    srcs = ["embed.go"],
    embedsrcs = glob(["*.up.sql"]),
    importpath = "github.com/verself/billing-service/migrations",
    visibility = ["//src/billing-service:__subpackages__"],
)

alias(
    name = "go_default_library",
    actual = ":migrations",
    visibility = ["//visibility:public"],
)
