load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//src/tools/deployment/nomad:component.bzl", "nomad_component")
load("//src/tools/deployment/spire:identity.bzl", "spire_identity")

filegroup(
    name = "role_sources",
    srcs = glob(
        [
            "defaults/**",
            "files/**",
            "handlers/**",
            "meta/**",
            "migrations/**",
            "tasks/**",
            "templates/**",
            "vars/**",
        ],
        allow_empty = True,
    ),
    visibility = ["//src/components:__pkg__"],
)

pkg_tar(
    name = "migration_artifact",
    srcs = glob(
        ["migrations/*.up.sql"],
        exclude = ["migrations/001_initial_schema.up.sql"],
    ),
    out = "clickhouse-migrations.tar",
    package_dir = "/",
    strip_prefix = ".",
)

nomad_component(
    name = "nomad_component",
    artifacts = {
        ":migration_artifact": "clickhouse-migrations",
    },
    component = "clickhouse_migrations",
    job_id = "clickhouse-migrations",
    job_spec = "nomad.hcl",
    provides = ["clickhouse:migrations"],
    visibility = ["//src/tools/deployment/nomad:__pkg__"],
)

spire_identity(
    name = "spiffe_identity_server",
    component = "clickhouse",
    entry_id = "verself-clickhouse-server",
    key = "clickhouse.server",
    path = "/svc/clickhouse-server",
    restart_units = ["clickhouse-server-spiffe-helper"],
    user = "clickhouse",
    visibility = ["//src/host:__pkg__"],
)

spire_identity(
    name = "spiffe_identity_operator",
    component = "clickhouse",
    entry_id = "verself-clickhouse-operator",
    key = "clickhouse.operator",
    path = "/svc/clickhouse-operator",
    restart_units = ["clickhouse-operator-spiffe-helper"],
    user = "clickhouse_operator",
    visibility = ["//src/host:__pkg__"],
)
