load("//src/tools/deployment/spire:identity.bzl", "spire_identity")

filegroup(
    name = "role_sources",
    srcs = glob(
        [
            "defaults/**",
            "files/**",
            "handlers/**",
            "meta/**",
            "migrations/**",
            "tasks/**",
            "templates/**",
            "vars/**",
        ],
        allow_empty = True,
    ),
    visibility = ["//src/components:__pkg__"],
)

spire_identity(
    name = "spiffe_identity",
    component = "grafana",
    entry_id = "verself-grafana",
    key = "grafana.default",
    path = "/svc/grafana",
    restart_units = [
        "grafana-clickhouse-spiffe-helper",
        "grafana",
    ],
    user = "grafana",
    visibility = ["//src/host:__pkg__"],
)
