load("//src/tools/deployment/spire:identity.bzl", "spire_identity")

filegroup(
    name = "role_sources",
    srcs = glob(
        [
            "defaults/**",
            "files/**",
            "handlers/**",
            "meta/**",
            "migrations/**",
            "tasks/**",
            "templates/**",
            "vars/**",
        ],
        allow_empty = True,
    ),
    visibility = ["//src/components:__pkg__"],
)

spire_identity(
    name = "spiffe_identity",
    component = "nats",
    entry_id = "verself-nats",
    key = "nats.default",
    path = "/svc/nats",
    restart_units = [
        "nats-spiffe-helper",
        "nats",
    ],
    user = "nats",
    visibility = ["//src/host:__pkg__"],
)
