load("//src/tools/deployment/spire:identity.bzl", "spire_identity")

filegroup(
    name = "role_sources",
    srcs = glob(
        [
            "defaults/**",
            "files/**",
            "handlers/**",
            "meta/**",
            "migrations/**",
            "tasks/**",
            "templates/**",
            "vars/**",
        ],
        allow_empty = True,
    ),
    visibility = ["//src/components:__pkg__"],
)

spire_identity(
    name = "spiffe_identity",
    component = "otelcol",
    entry_id = "verself-otelcol",
    key = "otelcol.default",
    path = "/svc/otelcol",
    restart_units = [
        "otelcol-clickhouse-spiffe-helper",
        "otelcol",
    ],
    user = "otelcol",
    visibility = ["//src/host:__pkg__"],
)
