load("//src/tools/deployment/nomad:component.bzl", "nomad_component")

filegroup(
    name = "role_sources",
    srcs = glob(
        [
            "defaults/**",
            "files/**",
            "handlers/**",
            "meta/**",
            "migrations/**",
            "tasks/**",
            "templates/**",
            "vars/**",
        ],
        allow_empty = True,
    ),
    visibility = ["//src/components:__pkg__"],
)

nomad_component(
    name = "nomad_component",
    component = "spicedb",
    job_id = "spicedb",
    job_spec = "nomad.hcl",
    visibility = ["//src/tools/deployment/nomad:__pkg__"],
)
