genrule(
    name = "verdaccio_runtime",
    srcs = [
        "runtime/package-lock.json",
        "runtime/package.json",
        "@server_tool_nodejs//file",
    ],
    outs = ["verdaccio_runtime.tar"],
    cmd = """
set -euo pipefail
out="$$(pwd)/$@"
tmp="$$(mktemp -d)"
trap 'rm -rf "$$tmp"' EXIT
mkdir -p "$$tmp/node" "$$tmp/runtime" "$$tmp/out/opt/verself/verdaccio/lib/node_modules" "$$tmp/out/opt/verself/verdaccio/bin"
tar -xJf "$(location @server_tool_nodejs//file)" -C "$$tmp/node" --strip-components=1
cp "$(location runtime/package.json)" "$$tmp/runtime/package.json"
cp "$(location runtime/package-lock.json)" "$$tmp/runtime/package-lock.json"
cd "$$tmp/runtime"
"$$tmp/node/bin/node" "$$tmp/node/lib/node_modules/npm/bin/npm-cli.js" ci --omit=dev --ignore-scripts --audit=false --fund=false --cache "$$tmp/npm-cache"
cp -a "$$tmp/runtime/node_modules/." "$$tmp/out/opt/verself/verdaccio/lib/node_modules/"
ln -s ../lib/node_modules/verdaccio/bin/verdaccio "$$tmp/out/opt/verself/verdaccio/bin/verdaccio"
chmod 0755 "$$tmp/out/opt/verself/verdaccio/lib/node_modules/verdaccio/bin/verdaccio"
tar --sort=name --owner=0 --group=0 --numeric-owner --mtime='UTC 2000-01-01' -cf "$$out" -C "$$tmp/out" .
""",
    visibility = ["//src/host/binaries:__pkg__"],
)
