load(":jobs.bzl", "nomad_resolved_jobs")

exports_files([
    "artifact.bzl",
    "jobs.bzl",
    "resolve_jobs.py",
])

filegroup(
    name = "prod_nomad_job_specs",
    srcs = glob(["sites/prod/jobs/*.nomad.json"]),
    visibility = ["//src/host-configuration:__pkg__"],
)

exports_files(["sites/prod/jobs/index.json"])

nomad_resolved_jobs(
    name = "prod_nomad_jobs",
    artifacts = {
        "//src/billing-service/cmd/billing-service:billing-service_nomad_artifact": "billing-service",
        "//src/viteplus-monorepo:nodejs_runtime_nomad_artifact": "nodejs-runtime",
        "//src/viteplus-monorepo/apps/company:node_app_nomad_artifact": "company",
        "//src/governance-service/cmd/governance-service:governance-service_nomad_artifact": "governance-service",
        "//src/identity-service/cmd/identity-service:identity-service_nomad_artifact": "identity-service",
        "//src/mailbox-service/cmd/mailbox-service:mailbox-service_nomad_artifact": "mailbox-service",
        "//src/notifications-service/cmd/notifications-service:notifications-service_nomad_artifact": "notifications-service",
        "//src/object-storage-service/cmd/object-storage-service:object-storage-service_nomad_artifact": "object-storage-service",
        "//src/profile-service/cmd/profile-service:profile-service_nomad_artifact": "profile-service",
        "//src/projects-service/cmd/projects-service:projects-service_nomad_artifact": "projects-service",
        "//src/sandbox-rental-service/cmd/sandbox-rental-recurring-worker:sandbox-rental-recurring-worker_nomad_artifact": "sandbox-rental-recurring-worker",
        "//src/sandbox-rental-service/cmd/sandbox-rental-service:sandbox-rental-service_nomad_artifact": "sandbox-rental-service",
        "//src/secrets-service/cmd/secrets-service:secrets-service_nomad_artifact": "secrets-service",
        "//src/source-code-hosting-service/cmd/source-code-hosting-service:source-code-hosting-service_nomad_artifact": "source-code-hosting-service",
        "//src/viteplus-monorepo/apps/verself-web:node_app_nomad_artifact": "verself-web",
    },
    index = "sites/prod/jobs/index.json",
    job_specs = [":prod_nomad_job_specs"],
    overrides = {
        "//src/billing-service/cmd/billing-service:nomad-overrides.json": "billing",
        "//src/governance-service/cmd/governance-service:nomad-overrides.json": "governance-service",
        "//src/identity-service/cmd/identity-service:nomad-overrides.json": "identity-service",
        "//src/mailbox-service/cmd/mailbox-service:nomad-overrides.json": "mailbox-service",
        "//src/notifications-service/cmd/notifications-service:nomad-overrides.json": "notifications-service",
        "//src/object-storage-service/cmd/object-storage-service:nomad-overrides.json": "object-storage-service",
        "//src/profile-service/cmd/profile-service:nomad-overrides.json": "profile-service",
        "//src/projects-service/cmd/projects-service:nomad-overrides.json": "projects-service",
        "//src/sandbox-rental-service/cmd/sandbox-rental-service:nomad-overrides.json": "sandbox-rental",
        "//src/secrets-service/cmd/secrets-service:nomad-overrides.json": "secrets-service",
        "//src/source-code-hosting-service/cmd/source-code-hosting-service:nomad-overrides.json": "source-code-hosting-service",
        "//src/viteplus-monorepo/apps/company:nomad-overrides.json": "company",
        "//src/viteplus-monorepo/apps/verself-web:nomad-overrides.json": "verself-web",
    },
)
